2005-11-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RadioButtonTest.cs: more tests for the 'name' attribute.

2005-10-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* LiteralTest.cs: Literal allows LiteralControl.

2005-10-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListBoxTest.cs: a few more tests for ListBox and selection.

2005-10-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListControlTest.cs: 3 more tests for ListControl.

2005-10-17 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CustomValidatorTest.cs: an empty control name is valid.

2005-10-17  Sebastien Pouliot  <sebastien@ximian.com> 

	* RequiredFieldValidatorCas.cs: New. CAS unit for 
	RequiredFieldValidator.

2005-10-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataListTest.cs: added some style and IRepeatInfoUser tests.

2005-10-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListBoxTest.cs: the name is the UniqueID, not the ClientID.
	* WebControlTest.cs: Attributes statebag is case insensitive.

2005-10-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ImageButtonTest.cs: test that 'name' attribute is rendered.

2005-10-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataGridTest.cs: Test for ButtonColumn with DataTextField.

2005-10-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataGridTest.cs: new test for the style of the linkbutton in the
	headers when sorting is enabled. Also test that the Items property
	contains the DataGridItems.

2005-09-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TableCellTest.cs: the "Text" viewstate value does not control whether
	we render the children or not.

	* EditCommandColumnTest.cs: some tests do not pass on MS rutime for me,
	so I've made them NotDotNet and fixed all the problems. Also added tests
	to ensure that the TextBox's form the BoundColumns are present in the
	hierarchy, as before we did nothing there.
	
	* ButtonTest.cs: test to show that a Button's children are not rendered.
